[project]
name = "hn-browser"
version = "0.1.0"
description = "A browser for bookmarked Hacker News links from Harmonic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alive-progress>=3.2.0",
    "appdirs>=1.4.4",
    "asks>=3.0.0",
    "beautifulsoup4>=4.13.3",
    "dash>=2.18.2",
    "dash-bootstrap-components>=1.7.1",
    "numpy>=2.2.3",
    "polars>=1.23.0",
    "pyarrow>=19.0.1",
    "sqlalchemy>=2.0",
    "sqlalchemy-utils>=0.41.2",
    "trio>=0.29.0",
]
