[project]
name = "hn-browser"
version = "0.1.0"
description = "A browser for bookmarked Hacker News links from Harmonic"
readme = "README.md"
requires-python = "==3.13.7"
dependencies = [
    "alive-progress",
    "appdirs",
    "asks",
    "anyio[trio]>=4.11.0",
    "beautifulsoup4",
    "dash",
    "dash-bootstrap-components",
    "numpy",
    "polars",
    "pyarrow",
    "sqlalchemy>=2.0",
    "sqlalchemy-utils",
]

[tool.uv.extra-build-dependencies]
    asks = ["h11", "anyio"]

[tool.uv.sources]
    asks = { git = "https://github.com/Cheaterman/asks" }